fix bug #33076 (str_ireplace() incorrectly counts result string length and may cause segfault) add test